Fix broken looking code block when overflows

--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -256,6 +256,10 @@ img {
     ol li {
       list-style-type: decimal;
     }
+    
+    pre {
+        overflow: auto;
+    }
   }
 }
 
